Amended PR reviews